--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -32,7 +32,7 @@ github_username:  alyraluca
 remote_theme: chrisrhymes/bulma-clean-theme@v0.14.0
 #plugins:
 #  - jekyll-feed
-theme_color: '#333333'
+theme_color: '625a51'
 
 # Exclude from processing.
 # The following items will not be processed, by default.
